# kafka-mcp-inspector

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml
claude_desktop_config/: README.md  mcp_config_example.json
demo_data/: __init__.py  seed_topics.py
mcp_server/: __init__.py  server.py
