[project]
name = "kafka-mcp-inspector"
version = "0.1.0"
description = "MCP server for querying Kafka clusters with natural language"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "confluent-kafka>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "demo_data"]
